@@ -26,17 +26,17 @@ AUX texmf-update 2395 RMD160 31f34da75eca76ab021e8ee30cf4539351127be7 SHA1 11b60
 MD5 eb6513411e31edbeb90595ff2302456a files/texmf-update 2395
 RMD160 31f34da75eca76ab021e8ee30cf4539351127be7 files/texmf-update 2395
 SHA256 e043510c72044f82f28f57f409db9a31c5c087429a5304c4ad535afeab2f4273 files/texmf-update 2395
-DIST texlive-basicbin-2007.tar.bz2 9135714 RMD160 14748132f4901eb3ba8ea09d6aabba1be7af1510 SHA1 44d6d2f731a3990bbdf349359cf858859f5422ec SHA256 a046d1c96682a82453382e8593cf88667215b6518fd38604dad31cd6e2e663af
-DIST texlive-binextra-2007.tar.bz2 548576 RMD160 5be5a7ad38c8fb0fb45666f3b252f82703caf3fe SHA1 9b9e33c5a4d00a6065bb7fab555bba6824c1823f SHA256 71979822da8b4f8ed2e062e0411dc612b08f65f5fec612c310226dbdb20fe6c3
+DIST texlive-basicbin-2007.tar.bz2 9135664 RMD160 b5dfe3b58bf38f6648e14b1b8ed675863795ecd9 SHA1 e0ef60266354c783e3577950425161c51381dfa7 SHA256 656ef8fe45718aa56206a06321e0a76370795c05ad60e65931ca387d93fd93a7
+DIST texlive-binextra-2007.tar.bz2 548635 RMD160 5026f57e371a92b1238eaaef6fd00aea2061ee3f SHA1 55587306b58c0eaf7f437d71ffa4a69e22338325 SHA256 1ec2b3f1b20194470180caa7be2964138a6639815e8c1bd9224daa44dde9003b
 DIST texlive-core-2007.tar.bz2 31078286 RMD160 496cb3fa3c5cd9b2ea5da3b0bced67a2b5afe7b9 SHA1 37286f7b962c18ec5234071a8d2dde1499d9ab71 SHA256 96c12147ea9717539553eb6b3be52c2df6163ca617dccc71282ccd39c2e5773b
-EBUILD texlive-core-2007.ebuild 5561 RMD160 81345253b968c99eef051d84faad8ad65bb8bac3 SHA1 a85e86075a6dc0c9ddb38d61871633e7e705be72 SHA256 eb6de82ab1c78e95628549f17174747d1f52c6ab8bdf6d5de370fed900437b38
-MD5 84b088f4e7c4667b332fb630b05fc24f texlive-core-2007.ebuild 5561
-RMD160 81345253b968c99eef051d84faad8ad65bb8bac3 texlive-core-2007.ebuild 5561
-SHA256 eb6de82ab1c78e95628549f17174747d1f52c6ab8bdf6d5de370fed900437b38 texlive-core-2007.ebuild 5561
-MISC ChangeLog 3155 RMD160 c292e56fa69a2e77d9d6cb7e4f08e38174a65186 SHA1 3df13c3e69bfd4d1cc11975b152d4235e0e4a245 SHA256 7fdac639d95947b3d4e5a1fc665b0c85bb6ce7979f8f17da18f439e8db84ff34
-MD5 f8020fa4453f60f3ed5bc8643adc847f ChangeLog 3155
-RMD160 c292e56fa69a2e77d9d6cb7e4f08e38174a65186 ChangeLog 3155
-SHA256 7fdac639d95947b3d4e5a1fc665b0c85bb6ce7979f8f17da18f439e8db84ff34 ChangeLog 3155
-MD5 194aff0f73789f487365c7a9909d7f4f files/digest-texlive-core-2007 801
-RMD160 e5efe58c039f5f166a7c43d766ced6972cfeb270 files/digest-texlive-core-2007 801
-SHA256 f2b74066c3aedc7f0f2df40c5f859c5927bc6dfb5b9848b88d0dab8860820ecf files/digest-texlive-core-2007 801
+EBUILD texlive-core-2007.ebuild 5828 RMD160 9c372ff902bd7bf7180884f05bdd828a8ce31542 SHA1 6fdb2ab90e6b528ed23fc6a8d5bac6c2fa775f2e SHA256 8a1ae6c6593644ae39f099fce53044bad251b2f68af692c67fdd1031d482527a
+MD5 cd4b11f13f0a69523038b6a7659db27c texlive-core-2007.ebuild 5828
+RMD160 9c372ff902bd7bf7180884f05bdd828a8ce31542 texlive-core-2007.ebuild 5828
+SHA256 8a1ae6c6593644ae39f099fce53044bad251b2f68af692c67fdd1031d482527a texlive-core-2007.ebuild 5828
+MISC ChangeLog 3273 RMD160 3063415a470cc002fe80dba963909ffbf5fd9923 SHA1 f7392c0ed6dfd9070ec5fc4e208c39fd5614fff7 SHA256 0600502d21f933dcabbf689927e338c6477ed68237135ce23b53b89b029081af
+MD5 ab391479f02de01171668f558a0fc856 ChangeLog 3273
+RMD160 3063415a470cc002fe80dba963909ffbf5fd9923 ChangeLog 3273
+SHA256 0600502d21f933dcabbf689927e338c6477ed68237135ce23b53b89b029081af ChangeLog 3273
+MD5 f9c318e88614d41dae340b536f96428f files/digest-texlive-core-2007 801
+RMD160 bc903ffca3f0930c5ecf2589f12f6b98a3f1e988 files/digest-texlive-core-2007 801
+SHA256 97e05941290f59dfeeb06fbcd89f1f7734e12ffae3b2d7fb4113e7184b5aa7ac files/digest-texlive-core-2007 801
