@@ -1,9 +1,9 @@
-MD5 39fe32b0d703a1b5dafe5e35fd13c77a texlive-basicbin-2007.tar.bz2 9135714
-RMD160 14748132f4901eb3ba8ea09d6aabba1be7af1510 texlive-basicbin-2007.tar.bz2 9135714
-SHA256 a046d1c96682a82453382e8593cf88667215b6518fd38604dad31cd6e2e663af texlive-basicbin-2007.tar.bz2 9135714
-MD5 dd01186bcfacecf2c798fbf10e2459dd texlive-binextra-2007.tar.bz2 548576
-RMD160 5be5a7ad38c8fb0fb45666f3b252f82703caf3fe texlive-binextra-2007.tar.bz2 548576
-SHA256 71979822da8b4f8ed2e062e0411dc612b08f65f5fec612c310226dbdb20fe6c3 texlive-binextra-2007.tar.bz2 548576
+MD5 25640be42684f96207123ad4ce5fbc5b texlive-basicbin-2007.tar.bz2 9135664
+RMD160 b5dfe3b58bf38f6648e14b1b8ed675863795ecd9 texlive-basicbin-2007.tar.bz2 9135664
+SHA256 656ef8fe45718aa56206a06321e0a76370795c05ad60e65931ca387d93fd93a7 texlive-basicbin-2007.tar.bz2 9135664
+MD5 b616b549607b3a93ddcd9f8bc8e6afa8 texlive-binextra-2007.tar.bz2 548635
+RMD160 5026f57e371a92b1238eaaef6fd00aea2061ee3f texlive-binextra-2007.tar.bz2 548635
+SHA256 1ec2b3f1b20194470180caa7be2964138a6639815e8c1bd9224daa44dde9003b texlive-binextra-2007.tar.bz2 548635
 MD5 d539b5a6b9f96cc2616f09f4543394c8 texlive-core-2007.tar.bz2 31078286
 RMD160 496cb3fa3c5cd9b2ea5da3b0bced67a2b5afe7b9 texlive-core-2007.tar.bz2 31078286
 SHA256 96c12147ea9717539553eb6b3be52c2df6163ca617dccc71282ccd39c2e5773b texlive-core-2007.tar.bz2 31078286
